// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package rules;


option go_package = "/rules/v1";

service User{
    rpc PerformRisk (RiskReq) returns (RiskRes) {}
}

message RiskReq {
    string From = 1; // v: required
    string To = 2; // v: required
    string Data = 3; // v: required
}
message RiskRes {
    bool Result = 1;
}
